crates/toml/tests/snapshots/invalid/ext/keys/no-eol-1.stderr
TOML parse error at line 1, column 5
  |
1 | 0=0r=false
  |     ^
unexpected key or value, expected newline, `#`
